--- a/LV1/style.sass
+++ b/LV1/style.sass
@@ -64,6 +64,7 @@ button, input, optgroup, select, textarea
       gap: px2rem(20)
     & > .col-lg-9, & > .col-lg-3
       width: 100%
+    //noinspection ALL
     @media (screen and min-width: $lg)
       & > .col-lg-9
         order: 1
