--- a/LV1/style.sass
+++ b/LV1/style.sass
@@ -298,3 +298,61 @@ section, article
           text-align: center
         & > .choice
           padding: 0
+
+
+
+.galerija
+  display: flex
+  flex-wrap: wrap
+  gap: px2rem(10)
+  @media (screen and min-width: $md)
+    gap: px2rem(20)
+  @media (screen and min-width: $xl)
+    gap: px2rem(25)
+
+  //noinspection ALL
+  & > .galerija_slika
+    position: relative
+    width: calc(50% - px2rem(5))
+    @media (screen and min-width: $md)
+      width: calc(33.33% - px2rem(13.33))
+    @media (screen and min-width: $xl)
+      width: calc(25% - px2rem(18.85))
+    display: inline-block
+    margin: 0
+    padding: 0
+    text-align: center
+    & img
+      display: block
+      width: 100%
+      height: auto
+      object-fit: cover
+      transition: transform 0.3s, box-shadow 0.3s
+      border-radius: px2rem(8)
+      aspect-ratio: 5/4
+      box-shadow: 0 px2rem(2) px2rem(4) rgba(0, 0, 0, 0.2)
+      @media (screen and min-width: $lg)
+        &:hover
+          transform: scale(1.05)
+          box-shadow: 0 px2rem(2) px2rem(4) rgba(0, 0, 0, 0.5)
+  & > .img-toggle
+    display: none
+    &:checked + .galerija_slika
+      img
+        position: fixed
+        top: 50%
+        left: 50%
+        transform: translate(-50%, -50%) scale(1.5)
+        z-index: 1000
+        max-width: 60%
+        max-height: 60vh
+
+    &:checked + .galerija_slika::before
+      content: ""
+      position: fixed
+      top: 0
+      left: 0
+      width: 100%
+      height: 100%
+      background: rgba(19, 19, 19, 0.6)
+      z-index: 999
