--- a/LV1/style.css
+++ b/LV1/style.css
@@ -31,7 +31,7 @@ html {
 }
 @media (min-width: 2048px) {
   html {
-    font-size: 1.175vw;
+    font-size: 1vw;
   }
 }
 
@@ -127,7 +127,12 @@ nav > .container > .brand > a {
 nav > .container > .links {
   width: fit-content;
   display: inline-flex;
-  gap: 1.1111111rem;
+  gap: 0.5555555rem;
+}
+@media (min-width: 992px) {
+  nav > .container > .links {
+    gap: 1.1111111rem;
+  }
 }
 nav > .container > .links > a {
   text-transform: uppercase;
@@ -155,6 +160,9 @@ nav > .container > .links > a:hover:after {
 
 footer {
   background-color: rgba(32, 139, 225, 0.85);
+  position: relative;
+  bottom: 0;
+  width: 100%;
 }
 footer > .container {
   padding-top: 5.5555555rem;
@@ -169,6 +177,12 @@ footer > .container > p {
 main {
   padding-top: 2.2222222rem;
   padding-bottom: 2.7777777rem;
+  min-height: 70vh;
+}
+
+section, article {
+  margin-top: 2.2222222rem;
+  margin-bottom: 2.2222222rem;
 }
 
 .vrijeme-info > .table-wrapper {
@@ -201,6 +215,9 @@ main {
   border-radius: 0.4444444rem;
   margin-bottom: 0.8333333rem;
   padding: 0.5555555rem 0.5555555rem 0.6666666rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   color: #f7f7f7;
 }
 .weather-card > .temp-info > p {
@@ -216,11 +233,202 @@ main {
   line-height: 3.5555555rem;
   font-weight: 700;
 }
+.weather-card > .weather-info > img {
+  width: 4.4444444rem;
+}
+.weather-card > .weather-info > p.location-weather-type {
+  margin: 0;
+  text-align: right;
+  padding: 0.5555555rem 0.5555555rem 0 0;
+}
 .weather-card.sunny {
+  background-color: #31749c;
+  transition: background-color 350ms;
+}
+.weather-card.sunny:hover, .weather-card.sunny:focus {
   background-color: #3B91C3;
 }
 .weather-card.rainy {
   background-color: #7491A3;
+  transition: background-color 350ms;
+}
+.weather-card.rainy:hover, .weather-card.rainy:focus {
+  background-color: #455761;
+}
+
+.pie-chart-wrapper {
+  --sunny-color: #ffd41e;
+  --rainy-color: #7491A3;
+  --cloudy-color: #9e9ea3;
+}
+@media (min-width: 992px) {
+  .pie-chart-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2.7777777rem;
+  }
+}
+.pie-chart-wrapper > .chart {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  background: conic-gradient(var(--sunny-color) 35%, var(--rainy-color) 0 41%, var(--cloudy-color) 0);
+  border-radius: 50%;
+  width: 75%;
+  max-width: 27.7777777rem;
+  aspect-ratio: 1/1;
+  transition: background 0.3s ease;
+}
+@media (min-width: 992px) {
+  .pie-chart-wrapper > .chart {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+.pie-chart-wrapper > .chart:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 0;
+  height: 0;
+  border-radius: 50%;
+  background-color: #f7f7f7;
+  transition: 0.3s;
+  transform: translate(-50%, -50%);
+}
+@media (min-width: 992px) {
+  .pie-chart-wrapper > .chart:after {
+    height: 85%;
+    width: 85%;
+  }
+}
+.pie-chart-wrapper > .chart:hover:after {
+  width: 85%;
+  height: 85%;
+}
+@media (min-width: 992px) {
+  .pie-chart-wrapper > .chart:hover:after {
+    height: 0;
+    width: 0;
+  }
+}
+.pie-chart-wrapper > .chart-info > .key {
+  list-style: none;
+  margin: 0;
+  padding: 2.2222222rem 0 0;
+  display: flex;
+  justify-content: center;
+  gap: 1.6666666rem;
+}
+@media (min-width: 992px) {
+  .pie-chart-wrapper > .chart-info > .key {
+    flex-direction: column;
+    gap: 0.5555555rem;
+  }
+}
+.pie-chart-wrapper > .chart-info > .key > li {
+  display: flex;
+  flex-direction: column;
+  gap: 0.2777777rem;
+  align-items: center;
+}
+@media (min-width: 992px) {
+  .pie-chart-wrapper > .chart-info > .key > li {
+    flex-direction: row;
+    gap: 0.5555555rem;
+  }
+}
+.pie-chart-wrapper > .chart-info > .key > li.sunny > .percent {
+  background: var(--sunny-color);
+}
+.pie-chart-wrapper > .chart-info > .key > li.rainy > .percent {
+  background: var(--rainy-color);
+}
+.pie-chart-wrapper > .chart-info > .key > li.cloudy > .percent {
+  background: var(--cloudy-color);
+}
+.pie-chart-wrapper > .chart-info > .key > li > .percent {
+  border-radius: 0.4444444rem;
+  color: white;
+  padding: 0.4444444rem 0.2222222rem;
+  text-align: center;
+}
+.pie-chart-wrapper > .chart-info > .key > li > .choice {
+  padding: 0;
+}
+
+.galerija {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5555555rem;
+}
+@media (min-width: 768px) {
+  .galerija {
+    gap: 1.1111111rem;
+  }
+}
+@media (min-width: 1200px) {
+  .galerija {
+    gap: 1.3888888rem;
+  }
+}
+.galerija > .galerija_slika {
+  position: relative;
+  width: calc(50% - 0.2777777rem);
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+@media (min-width: 768px) {
+  .galerija > .galerija_slika {
+    width: calc(33.33% - 0.7405555rem);
+  }
+}
+@media (min-width: 1200px) {
+  .galerija > .galerija_slika {
+    width: calc(25% - 1.0472222rem);
+  }
+}
+.galerija > .galerija_slika img {
+  display: block;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  transition: transform 0.3s, box-shadow 0.3s;
+  border-radius: 0.4444444rem;
+  aspect-ratio: 5/4;
+  box-shadow: 0 0.1111111rem 0.2222222rem rgba(0, 0, 0, 0.2);
+}
+@media (min-width: 992px) {
+  .galerija > .galerija_slika img:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0.1111111rem 0.2222222rem rgba(0, 0, 0, 0.5);
+  }
+}
+.galerija > .img-toggle {
+  display: none;
+}
+.galerija > .img-toggle:checked + .galerija_slika img {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1.5);
+  z-index: 1000;
+  max-width: 60%;
+  max-height: 60vh;
+}
+.galerija > .img-toggle:checked + .galerija_slika::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(19, 19, 19, 0.6);
+  z-index: 999;
 }
 
 /*# sourceMappingURL=style.css.map */
