--- a/LV4/style.sass
+++ b/LV4/style.sass
@@ -161,6 +161,13 @@ section, article
   margin-top: px2rem(40)
   margin-bottom: px2rem(40)
 
+.vrijeme-filter
+  & > #filteri
+    display: flex
+    align-items: center
+    gap: 1rem
+
+
 .vrijeme-info
   & > .table-wrapper
     overflow-x: auto
@@ -176,6 +183,30 @@ section, article
             width: fit-content
       & > tbody
         & > tr
+          position: relative
+          overflow: hidden
+          &:nth-child(even)
+            background-color: rgba($lv1-primary, 0.2)
+          &:nth-child(odd)
+            background-color: rgba($lv1-primary, 0.05)
+
+.vrijeme-info
+  & > .table-wrapper
+    overflow-x: auto
+    & > table
+      font-size: px2rem(16)
+      @media (screen and min-width: $lg)
+        font-size: px2rem(18)
+      & > thead
+        & > tr
+          color: $lv1-body-bg
+          background-color: rgba($lv1-primary, 0.8)
+          & > th
+            width: fit-content
+      & > tbody
+        & > tr
+          position: relative
+          overflow: hidden
           &:nth-child(even)
             background-color: rgba($lv1-primary, 0.2)
           &:nth-child(odd)
